# bittorrent-cpp23

./: .gitignore  CMakeLists.txt  README.md
include/bittorrent/: bencode.hpp  core.hpp  network.hpp  utils.hpp
include/bittorrent/bencode/: encoder.hpp  errors.hpp  parser.hpp  value.hpp
include/bittorrent/core/: errors.hpp  file_info.hpp  formatters.hpp  torrent_info.hpp  types.hpp
include/bittorrent/network/: errors.hpp  http_tracker.hpp  peer_info.hpp  tracker_response.hpp
include/bittorrent/utils/: crypto.hpp
src/: CMakeLists.txt  main.cpp
src/bencode/: encoder.cpp  parser.cpp
src/core/: torrent_info.cpp  types.cpp
src/network/tracker/: http_tracker.cpp
src/utils/: crypto.cpp
tests/: CMakeLists.txt  bencode_test.cpp  crypto_test.cpp  http_tracker_test.cpp  torrent_info_test.cpp
torrents/: ubuntu-25.10-desktop-amd64.iso.torrent
